--- a/plniconweb/package.json
+++ b/plniconweb/package.json
@@ -16,9 +16,10 @@
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-is": "^18.2.0",
+    "react-select": "^5.7.4",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1",
-    "react-select": "^5.7.4"
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
