--- a/plniconweb/package.json
+++ b/plniconweb/package.json
@@ -13,6 +13,8 @@
     "chart.js": "^4.3.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "apexcharts": "^3.41.1",
+    "react-apexcharts": "^1.4.1",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
