--- a/plniconweb/package.json
+++ b/plniconweb/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "apexcharts": "^3.41.1",
+    "axios": "^1.4.0",
     "chart.js": "^4.3.3",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
