--- a/plniconweb/package.json
+++ b/plniconweb/package.json
@@ -13,6 +13,7 @@
     "apexcharts": "^3.41.1",
     "axios": "^1.4.0",
     "chart.js": "^4.3.3",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
@@ -26,6 +27,7 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@types/node": "^20.5.1",
     "@types/react": "^18.2.15",
     "@types/react-datepicker": "^4.15.0",
     "@types/react-dom": "^18.2.7",
