--- a/plniconweb/package.json
+++ b/plniconweb/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "apexcharts": "^3.41.1",
     "axios": "^1.4.0",
     "chart.js": "^4.3.3",
@@ -24,6 +25,7 @@
     "react-router-dom": "^6.14.2",
     "react-select": "^5.7.4",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
