--- a/plniconweb/package.json
+++ b/plniconweb/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-is": "^18.2.0",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.14.2",
     "react-select": "^5.7.4",
     "react-slick": "^0.29.0",
